# TBAB

./: .clang-format  .gitignore  CMakeLists.txt  buildAndRun.bat  readme.md
TBABGame/: CMakeLists.txt
TBABGame/src/: main.cpp
TBABGame/src/core/: DataManager.cpp  DataManager.h  GameIds.h  GameManager.cpp  GameManager.h  InnateAttack.cpp  InnateAttack.h  Types.h  Weapon.h
TBABGame/src/core/abilities/: ActionSurgeAbility.cpp  ActionSurgeAbility.h  FireBreathAbility.cpp  FireBreathAbility.h  ImmunityToSlashingAbility.cpp  ImmunityToSlashingAbility.h  PoisonAbility.cpp  PoisonAbility.h  RageAbility.cpp  RageAbility.h  ShieldAbility.cpp  ShieldAbility.h  SneakAttackAbility.cpp  SneakAttackAbility.h  StoneSkinAbility.cpp  StoneSkinAbility.h  VulnerabilityToBludgeoningAbility.cpp  VulnerabilityToBludgeoningAbility.h
TBABGame/src/core/common/: AbilityData.h  AbilityUtils.cpp  AbilityUtils.h  CharacterClass.h  Choices.h  MonsterData.h  Random.h  Types.h  WeaponData.h
TBABGame/src/core/data/: AbilityData.h  CharacterClass.h  GameIds.h  MonsterData.h  Types.h  WeaponData.h
TBABGame/src/core/entities/: Creature.cpp  Creature.h  Monster.cpp  Monster.h  Player.cpp  Player.h
TBABGame/src/core/events/: Event.h  EventBus.cpp  EventBus.h
TBABGame/src/core/interfaces/: IAttackModifier.h  ICharacterClass.h  IDamageSource.h  IDefenseModifier.h
TBABGame/src/core/systems/: AbilityFactory.cpp  AbilityFactory.h  Battle.cpp  Battle.h  DataManager.cpp  DataManager.h  EntityFactory.cpp  EntityFactory.h  Game.cpp  Game.h
TBABGame/src/core/utils/: AbilityUtils.h
TBABGame/src/core/weapons/: InnateAttack.cpp  InnateAttack.h  Weapon.cpp  Weapon.h
TBABGame/src/data/: abilities.json  classes.json  monsters.json  weapons.json
TBABGame/src/view/: ConsoleInput.cpp  ConsoleInput.h
TBABGame/src/view/input/: ConsoleInput.cpp  ConsoleInput.h
TBABGame/src/view/interfaces/: IRenderer.h
TBABGame/src/view/renderers/: AsciiArt.h  ConsoleColors.h  ConsoleRenderer.cpp  ConsoleRenderer.h
